# THASSA

./: .env.boot.example  .gitignore  .gitmodules  DATA_SHAPING_GUIDE.txt  NOIR_RESPONSE_BINDING_PLAN.md  README.md  THASSA_CONTEXT_TREE.md  boot.sh  docker-compose.yml  production_implementation.md
backend/: .env.example  .gitignore  go.mod  go.sum
backend/abi/: PaymentToken.abi.json  ThassaMarkets.abi.json  abi.go
backend/migrations/: 0001_init.sql  0002_admin_email.sql  0003_social_batch.sql  0004_comment_mentions.sql  0005_username_reservations.sql  0006_media_variants.sql  0007_notification_prefs.sql  0008_message_post_share.sql  0009_generated_candidates.sql  0010_market_expiry.sql  0011_server_signing.sql  embed.go
contracts/: .env.example  .gitmodules  README.md  THASSA_PROTOCOL_CONTEXT.md  foundry.toml
docs/: PLATFORM_SPEC.md
frontend/: .env.example  README.md  package-lock.json  package.json
mobile/: .env.example  .gitignore  .npmrc  app.json  declarations.d.ts  index.js  metro.config.js  package-lock.json  package.json
node/: .env.example  README.md  go.mod  go.sum
rust_node/: .env.example  .gitignore  Cargo.toml  README.md
rust_node/abi/: ThassaHub.abi.json  ThassaOracle.abi.json
rust_node/bridge/: package.json  primus_bridge.cjs
rust_node/noir/flat_tuple/: Nargo.toml
rust_node/noir/flat_tuple/src/: main.nr
rust_node/src/: config.rs  contracts.rs  format.rs  lib.rs  logging.rs  main.rs  noir.rs  primus.rs  prover.rs  server.rs  shape.rs  submission.rs  types.rs  workflow.rs
rust_node/zkvm/lib/: Cargo.toml
rust_node/zkvm/lib/src/: lib.rs
rust_node/zkvm/program/: Cargo.toml
rust_node/zkvm/program/src/: main.rs
rust_node/zkvm/script/: Cargo.toml
storyboarding/: index copy.html  index.html
web/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
website/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+331 files in other folders)
