[package]
name = "rust_node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
bincode = "1.3.3"
dotenvy = "0.15"
ethers = { version = "2", features = ["abigen", "rustls"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sp1-sdk = { version = "=5.2.4", default-features = false, features = ["network", "reserved-capacity", "native-gnark"] }
tokio = { version = "1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thassa-zkvm-lib = { path = "zkvm/lib" }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
