[package]
name = "thassa-zkvm-program"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", default-features = false }
ethabi = "18.0.0"
hex = "0.4"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sp1-zkvm = "5.2.4"
thassa-zkvm-lib = { path = "../lib" }
tiny-keccak = { version = "2", features = ["keccak"] }
zktls-att-verification = { git = "https://github.com/primus-labs/zktls-att-verification.git", branch = "network-succinct" }
