[package]
name = "thassa-zkvm-script"
version = "0.1.0"
edition = "2021"
default-run = "export-elf"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "export-elf"
path = "src/bin/export_elf.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
hex = "0.4"
sp1-sdk = { version = "5.2.4", features = ["network"] }

[build-dependencies]
sp1-build = "5.2.4"
